--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.3.5",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.0",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.6",
     "swiper": "^9.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
