--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.2",
     "better-scroll": "^2.5.0",
+    "create-keyframe-animation": "^0.1.0",
     "normalize.css": "^8.0.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
