--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start:server": "cd NeteaseCloudMusicApi && cross-env PORT=3300 node app.js",
+    "start": "concurrently \"npm run start:server\" \"npm run dev\""
   },
   "dependencies": {
     "@alex_xu/react-loading": "^1.0.4",
@@ -33,6 +35,7 @@
     "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
+    "concurrently": "^7.6.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
