--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@alex_xu/react-loading": "^1.0.4",
     "@reduxjs/toolkit": "^1.9.2",
+    "antd-mobile": "^5.28.1",
     "axios": "^1.3.2",
     "better-scroll": "^2.5.0",
     "create-keyframe-animation": "^0.1.0",
